test/tools/router_check/test/config/Redirect2.golden.json
[
  {
    "test_name": "Test_1",
    "input": {
      ":authority": "www.lyft.com",
      ":path": "/foo",
      "ssl": true,
      "internal": true
    },
    "_validate": {
      "path_redirect": "",
      "cluster_name": "www2"
    }
  },
  {
    "test_name": "Test_2",
    "input": {
      ":authority": "redirect.lyft.com",
      ":path": "/foo",
      "ssl": false,
      "internal": false
    },
    "_validate": {
      "path_redirect": "http://new.lyft.com/foo",
      "cluster_name": ""
    }
  },
  {
    "test_name": "Test_3",
    "input": {
      ":authority": "redirect.lyft.com",
      ":path": "/foo"
    },
    "_validate": {
      "path_redirect": "http://new.lyft.com/foo",
      "cluster_name": ""
    }
  },
  {
    "test_name": "Test_4",
    "input": {
      ":authority": "redirect.lyft.com",
      ":path": "/foo",
      "ssl": false
    },
    "_validate": {
      "path_redirect": "http://new.lyft.com/foo",
      "cluster_name": ""
    }
  },
  {
    "test_name": "Test_5",
    "input": {
      ":authority": "redirect.lyft.com",
      "ssl": false,
      ":path": "/foo"
    },
    "_validate": {
      "path_redirect": "http://new.lyft.com/foo",
      "cluster_name": ""
    }
  }
]
