test/tools/router_check/test/config/Redirect2.yaml
virtual_hosts:
- name: www2
  domains:
  - www.lyft.com
  routes:
  - match:
      prefix: /
    route:
      cluster: www2
- name: redirect
  domains:
  - redirect.lyft.com
  routes:
  - match:
      prefix: /foo
    redirect:
      host_redirect: new.lyft.com
