test/tools/router_check/test/config/Redirect2_expected.json
[
  {
    "authority": "www.lyft.com",
    "path": "/foo",
    "check": {
      "path_redirect": "none",
      "cluster_name": "www2"
    },
    "ssl": true,
    "internal": true
  },
  {
    "authority": "redirect.lyft.com",
    "path": "/foo",
    "check": {
      "path_redirect": "http://new.lyft.com/foo",
      "cluster_name":"none"
    },
    "ssl" : false,
    "internal": false
  },
  {
    "authority": "redirect.lyft.com",
    "path": "/foo",
    "check": {
      "path_redirect": "http://new.lyft.com/foo",
      "cluster_name":"none"
    }
  },
  {
    "authority": "redirect.lyft.com",
    "path": "/foo",
    "check": {
      "path_redirect": "http://new.lyft.com/foo",
      "cluster_name":"none"
    },
    "ssl" : false
  },
  {
    "authority": "redirect.lyft.com",
    "path": "/foo",
    "check": {
      "path_redirect": "http://new.lyft.com/foo",
      "cluster_name":"none"
    },
    "ssl" : false
  }
]
